--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   google_generative_ai: ^0.4.3
   http: ^1.2.2
   animated_text_kit: ^4.2.0
+  flutter_dotenv: ^5.1.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
@@ -33,3 +35,4 @@ flutter:
      - assets/image.png
      - assets/logo.png
      - assets/marker.png
+     - .env
