--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,13 @@
 name: evpoint
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.4.4 <4.0.0'
+  sdk: ">=3.4.4 <4.0.0"
 
 dependencies:
-  flutter:  
+  flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
   mapmyindia_gl: ^0.3.1
@@ -24,7 +24,8 @@ dependencies:
   animated_text_kit: ^4.2.0
   flutter_dotenv: ^5.1.0
   provider: ^6.1.2
-
+  dot_curved_bottom_nav: ^0.0.1
+  dot_navigation_bar: ^1.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -32,7 +33,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-     - assets/image.png
-     - assets/logo.png
-     - assets/marker.png
-     - .env
+    - assets/image.png
+    - assets/logo.png
+    - assets/marker.png
+    - .env
