--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,13 @@ dependencies:
   google_generative_ai: ^0.4.3
   http: ^1.2.2
   animated_text_kit: ^4.2.0
-  mapmyindia_nearby_plugin: ^0.2.0
+  # mapmyindia_nearby_plugin: ^0.2.0
+  path_provider: ^2.0.0
+  collection: ^1.0.0
+  turf: ^0.0.7
+  supercharged: ^2.0.0
+  google_fonts: ^6.2.1
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
